# obsidianQ

./: .gitignore  CONTRIBUTING.md  HANDBOOK.md  LICENSE  README.md  SECURITY.md  implementation_pla1n.md  implementation_plan.md  jitpack.yml  pom.xml
.github/workflows/: ci.yml
core-rust/: Cargo.toml  test_zetas.rs
core-rust/benches/: dudect_bench.rs
core-rust/examples/: gen_kyber_zetas.rs  gen_zetas.rs  indcpa_test.rs  test_ntt.rs  test_zetas2.rs
core-rust/src/: cbd.rs  indcpa.rs  kem.rs  lib.rs  ntt.rs  pack.rs  poly.rs  polyvec.rs  reduce.rs  symmetric.rs
core-rust/tests/: kat_test.rs
wrapper-java/src/main/java/com/obsidianq/: ObsidianNativeBridge.java
wrapper-java/src/main/java/com/obsidianq/jce/: KyberDecapsulationSpi.java  KyberEncapsulatedSecret.java  KyberEncapsulationSpi.java  KyberKEMSpi.java  KyberKeyPairGeneratorSpi.java  KyberParameterSpec.java  KyberPrivateKey.java  KyberPublicKey.java  ObsidianQProvider.java
wrapper-java/src/main/java/com/obsidianq/jce/util/: ASN1Util.java
wrapper-java/src/main/java/com/obsidianq/util/: NativeExtractor.java
wrapper-java/src/test/java/com/obsidianq/: JCAIntegrityTest.java
