[package]
name = "obsidian-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zeroize = { version = "1.8", features = ["zeroize_derive"] }
sha3 = "0.10"
jni = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
hex = "0.4"
criterion = "0.5"
